--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -235,6 +235,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Allow redis URL format in redis hosts config. {pull}12408[12408]
 - Add tags into ec2 metricset. {issue}[12263]12263 {pull}12372[12372]
 - Collect tags from aws resources in aws module. {issue}[12263]12263
+- Collect tags from aws resources in aws module. {issue}[12263]12263 {pull}12480[12480]
 
 *Packetbeat*
 
