--- a/metricbeat/docs/modules/aws.asciidoc
+++ b/metricbeat/docs/modules/aws.asciidoc
@@ -124,6 +124,8 @@ each S3 bucket.
 === `cloudwatch`
 This metricset gives users the freedom to query metrics from AWS Cloudwatch with
 any given namespaces or specific instance with a given period.
+Please see https://docs.aws.amazon.com/AmazonCloudWatch/latest/monitoring/aws-services-cloudwatch-metrics.html[AWS Services That Publish CloudWatch Metrics]
+for a list of AWS services that publish metrics to CloudWatch.
 
 
 [float]
