--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -24569,6 +24569,35 @@ Percentage of CPU time during which I/O requests were issued to the device (band
 --
 
 [float]
+== entropy fields
+
+Available system entropy
+
+
+
+*`system.entropy.available_bits`*::
++
+--
+type: long
+
+The available bits of entropy
+
+
+--
+
+*`system.entropy.pct`*::
++
+--
+type: scaled_float
+
+format: percent
+
+The percentage of available entropy, relative to the pool size of 4096
+
+
+--
+
+[float]
 == filesystem fields
 
 `filesystem` contains local filesystem stats.
