--- a/heartbeat/docs/autodiscover-aws-elb-config.asciidoc
+++ b/heartbeat/docs/autodiscover-aws-elb-config.asciidoc
@@ -5,11 +5,12 @@
 heartbeat.autodiscover:
   providers:
   - type: aws_elb
-    region: us-east-1
-    credentials:
-        # If you don't wish to use env vars or shared credentials files explicitly put credentials here.
-        #access_key_id: my-access-key
-        #secret_access_key: my-secret-access-key
+    period: 1m
+    regions: us-east-1, us-east-2
+    # If you don't wish to use env vars or shared credentials files explicitly put credentials here.
+    #access_key_id: my-access-key
+    #secret_access_key: my-secret-access-key
+    #session_token: my-session-token
     templates:
     - condition:
         equals.port: 8080
