--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -24595,7 +24595,7 @@ type: float
 --
 
 [float]
-== entropy fields
+=== entropy
 
 Available system entropy
 
@@ -24604,22 +24604,22 @@ Available system entropy
 *`system.entropy.available_bits`*::
 +
 --
-type: long
-
 The available bits of entropy
 
+
+type: long
 
 --
 
 *`system.entropy.pct`*::
 +
 --
+The percentage of available entropy, relative to the pool size of 4096
+
+
 type: scaled_float
 
 format: percent
-
-The percentage of available entropy, relative to the pool size of 4096
-
 
 --
 
