Add resource_type_filters as a input parameter

--- a/x-pack/metricbeat/module/aws/cloudwatch/_meta/docs.asciidoc
+++ b/x-pack/metricbeat/module/aws/cloudwatch/_meta/docs.asciidoc
@@ -9,4 +9,5 @@ Some specific AWS permissions are required for IAM user to collect AWS SQS metri
 ec2:DescribeRegions
 cloudwatch:GetMetricData
 cloudwatch:ListMetrics
+tag:getResources
 ----
