--- a/metricbeat/docs/modules/aws.asciidoc
+++ b/metricbeat/docs/modules/aws.asciidoc
@@ -181,6 +181,9 @@ metricbeat.modules:
         - name: InstanceId
           value: i-0686946e22cf9494a
     - namespace: AWS/EBS
+    - namespace: AWS/ELB
+      resource_type_filters:
+        - elasticloadbalancing
   #regions:
   #  - us-east-1
   #  - us-east-2
