--- a/libbeat/docs/shared-autodiscover.asciidoc
+++ b/libbeat/docs/shared-autodiscover.asciidoc
@@ -21,7 +21,10 @@ start/stop events. This ensures you don't need to worry about state, but only de
 [float]
 ===== Docker
 
-The Docker autodiscover provider watches for Docker containers to start and stop. These are the available fields on every
+The Docker autodiscover provider watches for Docker containers to start and stop.
+
+
+These are the available fields during within config templating. The `docker.*` fields will be available on each emitted event.
 event:
 
   * host
@@ -113,8 +116,9 @@ endif::[]
 [float]
 ===== Kubernetes
 
-The Kubernetes autodiscover provider watches for Kubernetes pods to start, update, and stop. These are the available fields on every
-event:
+The Kubernetes autodiscover provider watches for Kubernetes pods to start, update, and stop.
+
+These are the available fields during within config templating. The `kubernetes.*` fields will be available on each emitted event.
 
   * host
   * port (if exposed)
@@ -231,7 +235,7 @@ and the Jolokia agents has to be allowed. Also notice that this multicast
 address is in the 239.0.0.0/8 range, that is reserved for private use within an
 organization, so it can only be used in private networks.
 
-These are the available fields on every event:
+These are the available fields during within config templating. The `jolokia.*` fields will be available on each emitted event.
 
   * jolokia.agent.id
   * jolokia.agent.version
@@ -261,16 +265,16 @@ ifdef::autodiscoverAWSELB[]
 [float]
 ===== Amazon ELBs
 
-The Amazon ELB autodiscover provider discovers ELBs and their listeners. This is useful when you don't want to connect
+The Amazon ELB autodiscover provider discovers https://aws.amazon.com/elasticloadbalancing/[ELBs] and their listeners. This is useful when you don't want to connect
 directly to a service, but rather to the ELB fronting a pool of services.
 
 This provider will yield one config block per ELB Listener. So, if you have one ELB exposing both ports 80 and 443, it
 will generate two configs, one for each port. Keep in mind that the beat will de-duplicate configs. So, if the generated
 configs are the same only one will actually run.
 
-This provider will load AWS credentials using the standard AWS environment variables and shared credentials files see https://docs.aws.amazon.com/general/latest/gr/aws-access-keys-best-practices.html[Best Practices for Managing AWS Access Keys] for more information. If you do not wish to use these, you may explicitly set the `credentials.access_key_id` and `credentials.secret_access_key` variables.
+This provider will load AWS credentials using the standard AWS environment variables and shared credentials files see https://docs.aws.amazon.com/general/latest/gr/aws-access-keys-best-practices.html[Best Practices for Managing AWS Access Keys] for more information. If you do not wish to use these, you may explicitly set the `access_key_id` and `secret_access_key` variables.
 
-These are the available fields on every event
+These are the available fields during within config templating. The `elb_listener.*` fields will be available on each emitted event.
 
   * host
   * port
@@ -286,6 +290,8 @@ These are the available fields on every event
   * elb_listener.security_groups
   * elb_listener.vpc_id
   * elb_listener.ssl_policy
+
+include::../../{beatname_lc}/docs/autodiscover-elb-config.asciidoc[]
 
 endif::autodiscoverAWSELB[]
 
