--- a/metricbeat/module/redis/_meta/docs.asciidoc
+++ b/metricbeat/module/redis/_meta/docs.asciidoc
@@ -8,15 +8,14 @@ The defaut metricsets are `info` and `keyspace`.
 The Redis module has these additional config options:
 
 *`hosts`*:: URLs that are used to connect to Redis.
-URL format: redis://[:password@]host[:port][/db-number][?option=value]
-*`password`*:: The password to authenticate, by default it's empty.
+URL format:
+redis://[:password@]host[:port][/db-number][?option=value]
+redis://HOST[:PORT][?password=PASSWORD[&db=DATABASE]]
 *`idle_timeout`*:: The duration to remain idle before closing connections. If
   the value is zero, then idle connections are not closed. The default value
   is 2 times the module period to allow a connection to be reused across
   fetches. The `idle_timeout` should be set to less than the server's connection
   timeout.
-*`network`*:: The network type to be used for the Redis connection. The default value is
-  `tcp`.
 *`maxconn`*:: The maximum number of concurrent connections to Redis. The default value
   is 10.
 
