--- a/metricbeat/module/redis/_meta/docs.asciidoc
+++ b/metricbeat/module/redis/_meta/docs.asciidoc
@@ -11,11 +11,14 @@ The Redis module has these additional config options:
 URL format:
 redis://[:password@]host[:port][/db-number][?option=value]
 redis://HOST[:PORT][?password=PASSWORD[&db=DATABASE]]
+*`password`*:: The password to authenticate, by default it's empty.
 *`idle_timeout`*:: The duration to remain idle before closing connections. If
   the value is zero, then idle connections are not closed. The default value
   is 2 times the module period to allow a connection to be reused across
   fetches. The `idle_timeout` should be set to less than the server's connection
   timeout.
+*`network`*:: The network type to be used for the Redis connection. The default value is
+  `tcp`.
 *`maxconn`*:: The maximum number of concurrent connections to Redis. The default value
   is 10.
 
