[Filebeat] Fix RFC5424 date parsing in system/syslog in pipeline (#12529) (#12543)
The date format used by the system/syslog pipeline has a couple of
issues:

- Since Elasticsearch switched to Java time from Joda time, it won't
  correctly parse timezone offsets that use a colon to separate hours
  and minutes.

- RFC5424 allows for 1 to 6 digits for the fractional second. This
  updates the pipeline to also accept 3 decimals (milliseconds).

(cherry picked from commit d30b4dcc11eb6d680f4475b982c439d6d1ae02a5)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -107,6 +107,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Fix goroutine leak caused on initialization failures of log input. {pull}12125[12125]
 - Fix goroutine leak on non-explicit finalization of log input. {pull}12164[12164]
 - Require client_auth by default when ssl is enabled for tcp input {pull}12333[12333]
+- Fix timezone offset parsing in system/syslog. {pull}12529[12529]
 
 *Heartbeat*
 
