--- a/libbeat/docs/version.asciidoc
+++ b/libbeat/docs/version.asciidoc
@@ -1,7 +1,8 @@
 :stack-version: 8.0.0
+:brew-version: 8.0
 :doc-branch: master
 :go-version: 1.12.4
-:release-state: unreleased
+:release-state: released
 :python: 2.7.9
 :docker: 1.12
 :docker-compose: 1.11
