--- a/libbeat/docs/shared-directory-layout.asciidoc
+++ b/libbeat/docs/shared-directory-layout.asciidoc
@@ -90,6 +90,21 @@ the following simple command, all paths are set correctly:
 
 endif::mac_os,win_os[]
 
+//TODO: Verify the following locations.
+
+ifdef::mac_os[]
+===== brew
+[cols="<h,<,<m",options="header",]
+|=======================================================================
+| Type   | Description | Location
+| home   | Home of the {beatname_uc} installation. | /usr/local/var/homebrew/linked/{beatname_lc}
+| bin    | The location for the binary files. | /usr/local/var/homebrew/linked/{beatname_lc}/bin
+| config | The location for configuration files. | /usr/local/etc/{beatname_lc}
+| data   | The location for persistent data files. | /usr/local/var/lib/{beatname_lc}
+| logs   | The location for the logs created by {beatname_uc}. | /usr/local/var/log/{beatname_lc}
+|=======================================================================
+endif::mac_os[]
+
 ifndef::win_only[]
 
 ["source","sh",subs="attributes"]
