--- a/docs/devguide/event-conventions.asciidoc
+++ b/docs/devguide/event-conventions.asciidoc
@@ -40,7 +40,8 @@ workers.idle
 [[units]]
 ==== Units
 
-These are well-known suffixes to represent units of stored values:
+These are well-known suffixes to represent units of stored values, use them as a dotted suffix when
+possible. For example `system.memory.total.bytes` or `system.diskio.read.count`:
 
 [options="header"]
 |=======================
