Improve system/syslog date parsing fix in #12543
The original fix hardcoded some date formates that are a subset of
ISO8601. This adds full ISO8601 date support to the pipeline.

Related #12543

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -225,6 +225,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - `container` and `docker` inputs now support reading of labels and env vars written by docker JSON file logging driver. {issue}8358[8358]
 - Add specific date processor to convert timezones so same pipeline can be used when convert_timezone is enabled or disabled. {pull}12253[12253]
 - Add MSSQL module {pull}12079[12079]
+- Add full ISO8601 date parsing support for system/syslog module. {pull}12568[12568]
 
 *Heartbeat*
 
